update base details

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Sourabh-Kumar7.github.io",
-  "name": "Sourabh-Kumar7.github.io",
+  "homepage": "https://snehagiranje27.github.io",
+  "name": "snehagiranje27.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
