--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.0.0",
-    "react-reveal": "^1.2.2",
+    "react-awesome-reveal": "^3.0.0",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
     "react-twitter-embed": "3.0.3",
@@ -28,7 +28,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
     "check-format": "prettier -c \"./**/*.{js,css,json,scss}\"",
-    "postinstall": "npx browserslist@latest --update-db"
+    "postinstall": "npm install --legacy-peer-deps && npx browserslist@latest --update-db"
   },
   "eslintConfig": {
     "extends": "react-app"
